--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,4 +4,8 @@
 
 .app {
     font-family: "IBM Plex Sans", sans-serif;
+    background-image: url("./assets/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
